DigitizationAcademy-44 Course Page Headers - the info background is too short. Fixes #44. Altered css to let the tool tip box expand.

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1443,7 +1443,7 @@ ul.course-objectives li{
     transform: translateX(-50%);
 
     width: max-content;
-    max-width: 300px; /* Prevents tooltips from becoming too wide */
+    /*max-width: 400px; /* Prevents tooltips from becoming too wide */
     min-width: 120px; /* Ensures minimum readable width */
     opacity: 0;
     transition: opacity 0.3s;
